--- a/home.html
+++ b/home.html
@@ -14,8 +14,8 @@
                 <img src="programadorlogo.png" alt="logo">
             </div>
             <div class="links">
-            <li><a href="#aboutme" class="list-item">About me</a></li>
-            <li><a href="#experience" class="list-item">Experience</a></li>
+            <li><a href="#aboutme" class="link">About me</a></li>
+            <li><a href="#experience" class="link">Experience</a></li>
         </div>
         </ul>
     </nav>
@@ -80,7 +80,17 @@
 
 </div>
 <div class="footer">
-
+<div class="links">
+    <a class="link instagrambackground" id="instagramlink" href="https://www.instagram.com/jotaa_py/"><img src="instagram.png" class="instagramlogo"></a>
+    <a class="link discordbackground" id="discordlink" href="https://discord.com/"><img src="discord.png" class="discordlogo"></a>
 </div>
+<div class="creditos">
+    <p>Created by Jhonathan in 2023 </p>
+</div>
+</div>
+<!-- 
+    Firma de Jhonathan. o de spawl (> O)
+ -->                               
+<script src="javascript/main.js"></script>
 </body>
 </html>
