Finish? i dont know

--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
         <h1 class="titletext">About Me</h1>
     </div>
     <div class="information">
-        <p class="whitecolor textshadowred">I am Jhonathan I am from Venezuela I born in 2013 <br> and not its a error Yes its 2013 <br>
+        <p class="whitecolor textshadowred">I am Jhonathan I am from Venezuela I born in 2013 <br> and not its a error Yes I born in 2013 <br>
             you as thinking That's not's real but yes <br> I am Kid I am good in team work :)
     </div>
 
