Not was the finish!

--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
 <div class="footer">
 <div class="links">
     <a class="link instagrambackground" id="instagramlink" href="https://www.instagram.com/jotaa_py/"><img src="instagram.png" class="instagramlogo"></a>
-    <a class="link discordbackground" id="discordlink" href="https://discord.com/"><img src="discord.png" class="discordlogo"></a>
+    <a class="link discordbackground" id="discordlink" href="#"><img src="discord.png" class="discordlogo"></a>
 </div>
 <div class="creditos">
     <p>Created by Jhonathan in 2023 </p>
