--- a/home.html
+++ b/home.html
@@ -16,6 +16,7 @@
             <div class="links">
             <li><a href="#aboutme" class="link">About me</a></li>
             <li><a href="#experience" class="link">Experience</a></li>
+            <li><a href="#information" class="link">Info</a></li>
         </div>
         </ul>
     </nav>
@@ -79,10 +80,10 @@
     </div>
 
 </div>
-<div class="footer">
+<div class="footer" id="information">
 <div class="links">
     <a class="link instagrambackground" id="instagramlink" href="https://www.instagram.com/jotaa_py/"><img src="instagram.png" class="instagramlogo"></a>
-    <a class="link discordbackground" id="discordlink" href="#"><img src="discord.png" class="discordlogo"></a>
+    <a class="link discordbackground" id="discordlink" href="#information"><img src="discord.png" class="discordlogo"></a>
 </div>
 <div class="creditos">
     <p>Created by Jhonathan in 2023 </p>
