OTRO COMMIT AAA

--- a/home.html
+++ b/home.html
@@ -1,97 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Johnathan Portfolio</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
-<header>
-    <nav class="navbar">
-        <ul class="list">
-            <div class="logo">
-                <img src="programadorlogo.png" alt="logo">
-            </div>
-            <div class="links">
-            <li><a href="#aboutme" class="link">About me</a></li>
-            <li><a href="#experience" class="link">Experience</a></li>
-            <li><a href="#information" class="link">Info</a></li>
-        </div>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <nav class="navbar">
+            <ul class="list">
+                <div class="logo">
+                    <img src="programadorlogo.png" alt="logo">
+                </div>
+                <div class="links">
+                    <li><a href="#aboutme" class="link">About me</a></li>
+                    <li><a href="#experience" class="link">Experience</a></li>
+                    <li><a href="#information" class="link">Info</a></li>
+                </div>
+            </ul>
+        </nav>
+    </header>
 
-<div class="module">
-    <div class="content_text">
-        <h1 class="titletext">Welcome.</h1>
-        <h3>I am Jhonathan, a programmer.</h3>
-        <h5>My portfolio</h5>
-    </div>
-</div>
-
-<div class="module" id="experience">
-    <div class="content">
+    <div class="module">
         <div class="content_text">
-            <h1 class="title_text">I have experience in...</h1>
-        </div>
-
-        <div class="img_content">
-            <div class="imgdiv">
-                <img src="htmlogo.png" alt="HTML Logo">
-                <p>HTML</p>
-            </div>
-
-            <div class="imgdiv">
-                <img src="csslogo.png" alt="CSS Logo">
-                <p>CSS</p>
-            </div>
-
-            <div class="imgdiv">
-                <img src="javascriptlogo.png" alt="JavaScript Logo">
-                <p>JavaScript</p>
-            </div>
-        
-        <div class="imgdiv">
-            <img src="pythonlogo.png" alt="Python logo">
-            <p>Python (Senior)</p>
-        </div>
-        <div class="imgdiv">
-            <img src="vbalogo.png" alt="VBS LOGO">
-            <p>Visual Basic (Basic)</p>
-        </div>
-
-        <div class="imgdiv">
-            <img src="linuxlogo.png" alt="Linux LOGO">
-            <p>Linux terminals (Medium)</p>
-        </div>
-
+            <h1 class="titletext">Welcome.</h1>
+            <h3>I am Jhonathan, a programmer.</h3>
+            <h5>My portfolio</h5>
         </div>
     </div>
-</div>
 
-<div class="module aboutme" id="aboutme">
-    <div class="content_text">
-        <h1 class="titletext">About Me</h1>
-    </div>
-    <div class="information">
-        <p class="whitecolor textshadowred">I am Jhonathan I am from Venezuela I born in 2013 <br> and not its a error Yes I born in 2013 <br>
-            you as thinking That's not's real but yes <br> I am Kid I am good in team work :)
+    <div class="module" id="experience">
+        <div class="content">
+            <div class="content_text">
+                <h1 class="title_text">I have experience in...</h1>
+            </div>
+
+            <div class="img_content">
+                <div class="imgdiv">
+                    <img src="htmlogo.png" alt="HTML Logo">
+                    <p>HTML</p>
+                </div>
+
+                <div class="imgdiv">
+                    <img src="csslogo.png" alt="CSS Logo">
+                    <p>CSS</p>
+                </div>
+
+                <div class="imgdiv">
+                    <img src="javascriptlogo.png" alt="JavaScript Logo">
+                    <p>JavaScript</p>
+                </div>
+
+                <div class="imgdiv">
+                    <img src="pythonlogo.png" alt="Python logo">
+                    <p>Python (Senior)</p>
+                </div>
+                <div class="imgdiv">
+                    <img src="vbalogo.png" alt="VBS LOGO">
+                    <p>Visual Basic (Basic)</p>
+                </div>
+
+                <div class="imgdiv">
+                    <img src="linuxlogo.png" alt="Linux LOGO">
+                    <p>Linux terminals (Medium)</p>
+                </div>
+
+            </div>
+        </div>
     </div>
 
-</div>
-<div class="footer" id="information">
-<div class="links">
-    <a class="link instagrambackground" id="instagramlink" href="https://www.instagram.com/jotaa_py/"><img src="instagram.png" class="instagramlogo"></a>
-    <a class="link discordbackground" id="discordlink" href="#information"><img src="discord.png" class="discordlogo"></a>
-</div>
-<div class="creditos">
-    <p>Created by Jhonathan in 2023 </p>
-</div>
-</div>
-<!-- 
+    <div class="module aboutme" id="aboutme">
+        <div class="content_text">
+            <h1 class="titletext">About Me</h1>
+
+            <div class="information">
+                <p class="whitecolor textshadowred">I am Jhonathan I am from Venezuela I born in 2013 <br> and not its a
+                    error Yes I born in 2013 <br>
+                    you as thinking That's not's real but yes <br> I am Kid I am good in team work :)
+            </div>
+        </div>
+
+    </div>
+    <div class="footer" id="information">
+        <div class="links">
+            <a class="link instagrambackground" id="instagramlink" href="https://www.instagram.com/jotaa_py/"><img
+                    src="instagram.png" class="instagramlogo"></a>
+            <a class="link discordbackground" id="discordlink" href="#information"><img src="discord.png"
+                    class="discordlogo"></a>
+        </div>
+        <div class="creditos">
+            <p>Created by Jhonathan in 2023 </p>
+        </div>
+    </div>
+    <!-- 
     Firma de Jhonathan. o de spawl (> O)
- -->                               
-<script src="javascript/main.js"></script>
+ -->
+    <script src="javascript/main.js"></script>
 </body>
+
 </html>
